<resources>
    <string name="app_name">Treino Fitness</string>

    <!-- Strings related to login -->
    <string name="prompt_email">Email</string>
    <string name="prompt_password">Password</string>
    <string name="action_sign_in">Sign in or register</string>
    <string name="action_sign_in_short">Sign in</string>
    <string name="error_invalid_email">This email address is invalid</string>
    <string name="error_invalid_password">This password is too short</string>
    <string name="error_incorrect_password">This password is incorrect</string>
    <string name="error_field_required">This field is required</string>
    <string name="permission_rationale">"Contacts permissions are needed for providing email
        completions."
    </string>

    <string name="btn_aval_fisica">Avaliações Físicas</string>
    <string name="btn_treino">Treinos</string>
    <string name="btn_anamnese">Anamnese</string>
    <string name="title_activity_physical">Avaliações Físicas</string>

    <string name="text_snackbar">Testando o snack</string>
    <string name="msg">Teste de mensagem na tela de atividade fisica</string>

    <!--Strings to physical aval-->
    <string name="prompt_peito">Peito</string>
    <string name="prompt_ombro">Ombro</string>
    <string name="prompt_cintura">Cintura</string>
    <string name="prompt_bra_direito">Braço direito</string>
    <string name="prompt_bra_esquerdo">Braço esquerdo</string>
    <string name="prompt_ant_esquerdo">Antebraço esquerdo</string>
    <string name="prompt_ant_direito">Antebraço direito</string>
    <string name="prompt_peso">Peso</string>
    <string name="prompt_altura">Altura</string>
    <string name="prompt_coxa_direita">Coxa direita</string>
    <string name="prompt_coxa_esquerda">Coxa esquerda</string>

    <!--Strings to amanese screen-->
    <string name="prompt_hipertensao">Hipertensão</string>
    <string name="prompt_diabete">Diabete</string>
    <string name="prompt_articulacao">Articulação</string>
    <string name="prompt_fuma">Fumante</string>
    <string name="prompt_estresse">Estresse</string>
    <string name="prompt_cardiaco">Cardiaco</string>
    <string name="prompt_muscular">Muscular</string>
    <string name="title_activity_train">TrainActivity</string>
    <string name="title_activity_training_exercise">Exercícios</string>
    <string name="action_settings">Settings</string>
    <string name="section_format">Hello World from section: %1$d</string>


</resources>
