<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    tools:context="com.rflpazini.treinofitness.MainActivity">

    <Button
        android:id="@+id/btn_aval_fisica"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/btn_aval_fisica"
        android:layout_marginTop="61dp"
        android:layout_alignParentTop="true"
        android:layout_alignParentLeft="true"
        android:layout_alignParentStart="true" />

    <Button
        android:id="@+id/btn_treino"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/btn_treino"
        android:layout_below="@+id/btn_aval_fisica"
        android:layout_alignParentLeft="true" />

    <Button
        android:id="@+id/btn_anamnese"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/btn_anamnese"
        android:layout_below="@+id/btn_treino"
        android:layout_alignParentLeft="true" />
</RelativeLayout>
