<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    tools:context="com.rflpazini.treinofitness.anamnese.AnamneseActivity">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_alignParentTop="true"
        android:layout_centerHorizontal="true"
        android:orientation="vertical">

        <android.support.design.widget.TextInputLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <EditText
                android:id="@+id/hiperAna"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="@string/prompt_hipertensao"
                android:inputType="textPersonName|textCapWords"
                android:maxLines="1"
                android:singleLine="true" />

        </android.support.design.widget.TextInputLayout>

        <android.support.design.widget.TextInputLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <EditText
                android:id="@+id/diabeteAna"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="@string/prompt_diabete"
                android:inputType="textPersonName|textCapWords"
                android:maxLines="1"
                android:singleLine="true" />

        </android.support.design.widget.TextInputLayout>

        <android.support.design.widget.TextInputLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <EditText
                android:id="@+id/artculacaoAna"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="@string/prompt_articulacao"
                android:inputType="textPersonName|textCapWords"
                android:maxLines="1"
                android:singleLine="true" />

        </android.support.design.widget.TextInputLayout>

        <android.support.design.widget.TextInputLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <EditText
                android:id="@+id/fumaAna"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="@string/prompt_fuma"
                android:inputType="textPersonName|textCapWords"
                android:maxLines="1"
                android:singleLine="true" />

        </android.support.design.widget.TextInputLayout>

        <android.support.design.widget.TextInputLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <EditText
                android:id="@+id/estresseAna"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="@string/prompt_estresse"
                android:inputType="textPersonName|textCapWords"
                android:maxLines="1"
                android:singleLine="true" />

        </android.support.design.widget.TextInputLayout>

        <android.support.design.widget.TextInputLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <EditText
                android:id="@+id/cardioAna"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="@string/prompt_cardiaco"
                android:inputType="textPersonName|textCapWords"
                android:maxLines="1"
                android:singleLine="true" />

        </android.support.design.widget.TextInputLayout>

        <android.support.design.widget.TextInputLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <EditText
                android:id="@+id/musculoAna"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="@string/prompt_muscular"
                android:inputType="textPersonName|textCapWords"
                android:maxLines="1"
                android:singleLine="true" />

        </android.support.design.widget.TextInputLayout>

        <Button
            android:id="@+id/buttonAnamConfirmar"
            style="@style/Widget.AppCompat.Button.Colored"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="Confirmar"
            android:layout_marginTop="43dp"
            android:paddingBottom="@dimen/activity_vertical_margin"
            android:paddingTop="@dimen/activity_vertical_margin"/>
    </LinearLayout>

</RelativeLayout>
